[tool.poetry]
name = "data-centric-model"
version = "0.1.0"
description = ""
authors = ["auri99 aurelleingrid832@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
tensorflow = "^2.16.2"
pandas = "^2.2.2"
torch = "^2.3.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
